--- a/Dockerfile_x86_64
+++ b/Dockerfile_x86_64
@@ -3,7 +3,7 @@ ARG DOCKERSRC=frommakefile
 ARG USERNAME=frommakefile
 ARG JVVMAJOR=frommakefile
 #
-FROM ${USERNAME}/${DOCKERSRC}:${ARCH}_$(JVVMAJOR)
+FROM ${USERNAME}/${DOCKERSRC}:${ARCH}_${JVVMAJOR}
 #
 ARG TMVMAJOR=8
 ARG TMVERSION=8.5.24
