--- a/Dockerfile_x86_64
+++ b/Dockerfile_x86_64
@@ -1,9 +1,8 @@
 ARG ARCH=frommakefile
 ARG DOCKERSRC=frommakefile
 ARG USERNAME=frommakefile
-ARG JVVMAJOR=frommakefile
 #
-FROM ${USERNAME}/${DOCKERSRC}:${ARCH}_${JVVMAJOR}
+FROM ${USERNAME}/${DOCKERSRC}:${ARCH}
 #
 ARG TMVMAJOR=8
 ARG TMVERSION=8.5.24
