added support for armv7l and aarch64

--- a/Dockerfile_x86_64
+++ b/Dockerfile_x86_64
@@ -1,8 +1,6 @@
-ARG ARCH=frommakefile
 ARG DOCKERSRC=frommakefile
-ARG USERNAME=frommakefile
 #
-FROM ${USERNAME}/${DOCKERSRC}:${ARCH}
+FROM ${DOCKERSRC}
 #
 ARG TMVMAJOR=8
 ARG TMVERSION=8.5.24
